# test_task

./: .gitignore  CMakeLists.txt  api_generated.h  dataobject.cpp  dataobject.h  delegate.cpp  delegate.h  delegate.ui  ellipseobject.cpp  ellipseobject.h  infomodel.cpp  infomodel.h  itemdelegate.cpp  itemdelegate.h  lineobject.cpp  lineobject.h  main.cpp  rectobject.cpp  rectobject.h  resource.qrc  test_task.pro  testtask.cpp  testtask.h  testtask.ui  triangleobject.cpp  triangleobject.h  worker.cpp  worker.h  workerthread.cpp  workerthread.h
emulator/: api.fbs
emulator/testServerLinux/: testServer
